<resources>
    <string name="app_name">W5_P4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_a_word_then_hit_submit">Enter a word then hit submit.</string>
    <string name="word_shows_here">Input shows here</string>
    <string name="clear">CLEAR</string>
    <string name="submit">SUBMIT</string>
    <string name="score">SCORE:</string>
    <string name="new_game">NEW GAME</string>
    <string name="_0">0</string>
</resources>